[gd_scene load_steps=4 format=3 uid="uid://x3oe10u0lnm6"]

[ext_resource type="Script" path="res://hud.gd" id="1_08byj"]
[ext_resource type="PackedScene" uid="uid://bu4hub4oo1x7a" path="res://leaderboard.tscn" id="2_wo5dk"]
[ext_resource type="Script" path="res://name_entry.gd" id="5_a5jol"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_08byj")

[node name="MainMenu" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.0
offset_top = -189.0
offset_right = 172.0
offset_bottom = 171.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="GameTitle" type="Label" parent="MainMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Splashy Fish"

[node name="StartButton" type="Button" parent="MainMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="ScoreboardButton" type="Button" parent="MainMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Scores"

[node name="QuitButton" type="Button" parent="MainMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Quit
"

[node name="GameScreen" type="CanvasLayer" parent="."]
visible = false

[node name="ScoreLabel" type="Label" parent="GameScreen"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -184.0
offset_top = 40.0
offset_right = -1.0
offset_bottom = 88.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "Score: 0"

[node name="Message" type="Label" parent="GameScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -190.0
offset_right = 360.0
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Survive!"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameScreen"]
visible = false
offset_left = 468.0
offset_top = 299.0
offset_right = 812.0
offset_bottom = 395.0
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="MessageTimer" type="Timer" parent="GameScreen"]
wait_time = 4.0

[node name="HighScoreEntry" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -174.5
offset_top = -189.5
offset_right = 174.5
offset_bottom = 107.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="HighScoreEntry"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Game Over"

[node name="PlayerScore" type="Label" parent="HighScoreEntry"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1

[node name="NameEntry" type="LineEdit" parent="HighScoreEntry"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
placeholder_text = "Enter Your Initials"
alignment = 1
max_length = 3
script = ExtResource("5_a5jol")

[node name="NameSubmitButton" type="Button" parent="HighScoreEntry"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Submit"

[node name="Leaderboards" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="Leaderboards"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "High Scores"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Leaderboards"]
layout_mode = 2
alignment = 1

[node name="LocalLeaderboard" parent="Leaderboards/HBoxContainer" instance=ExtResource("2_wo5dk")]
layout_mode = 2

[node name="GlobalLeaderboard" parent="Leaderboards/HBoxContainer" instance=ExtResource("2_wo5dk")]
layout_mode = 2
global = true

[node name="MainMenuButton" type="Button" parent="Leaderboards"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_font_sizes/font_size = 64
text = "Main Menu"

[connection signal="visibility_changed" from="MainMenu" to="." method="_on_main_menu_visibility_changed"]
[connection signal="pressed" from="MainMenu/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MainMenu/ScoreboardButton" to="." method="_on_scoreboard_button_pressed"]
[connection signal="pressed" from="MainMenu/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="GameScreen/RestartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="GameScreen/MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="text_changed" from="HighScoreEntry/NameEntry" to="HighScoreEntry/NameEntry" method="_on_text_changed"]
[connection signal="pressed" from="HighScoreEntry/NameSubmitButton" to="." method="_on_name_submit_button_pressed"]
[connection signal="pressed" from="Leaderboards/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
